style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');

:root {
--main-background: hsl(233, 47%, 7%);
--card-background: hsl(244, 38%, 16%);
--accent: hsl(277, 64%, 65%);
}

*,
::after,
::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

img,
picture {
    max-width: 100%;
    display: block;
}

body {
    background-color: var(--main-background);
    padding: 4.5rem 1.5rem;
    font-size: 93.75%;
    font-family: 'Lexend Deca', sans-serif;
    color: white;
    min-height: 100dvh;
    display: flex;
    justify-content: center;
    align-items: center;
}

main {
    background-color: var(--card-background);
    text-align: center;
    border-bottom-left-radius: .5rem;
    border-bottom-right-radius: .5rem;
    
}


.card__img {
    border-top-left-radius: .5rem;
    border-top-right-radius: .5rem;
    filter: grayscale(100%) sepia(30%) saturate(900%) 
    hue-rotate(230deg) brightness(70%) blur(.05rem);
}

.card__content {
    font-size: 1rem;
    padding: 2.5rem 1.35rem;
    
}

.card__content--heading {
    font-size: clamp(1.8rem, 5vw, 3rem);
}

span {
    color: var(--accent);
}

.card__content--desc {
    margin-block: 1.5rem 2.5rem;
    font-size: clamp(1rem, 5vw, 1.2rem);
    line-height: 1.5;
    color: hsl(0, 0%, 65%);
}

.card__content--stat {
    display: grid;
    margin-block: 1.5rem 0;
}

.number {
    font-size: clamp(1.5rem, 5vw, 2rem);
    font-family: 'Inter', sans-serif;
    font-weight: 700;
}

.stat-name {
    text-transform: uppercase;
    font-size: clamp(.8rem, 5vw, 1rem);
    color: hsl(0, 0%, 65%);
    margin-block-start: .3rem;
}

@media only screen and (width >= 768px) {
    
    main {
        max-width: 82rem;
        
    }

    .card {
        display: grid;
        grid-template-columns: repeat(2, minmax(20rem, 41rem));
        grid-template-areas: 
        "content image";
        
        text-align: left;
    }

    .card__content {
        grid-area: content;
        padding-inline: 5rem;
        padding-block-start: 5rem;
        padding-inline-start: 3rem;
    }

    .card__img {
        grid-area: image;
        object-fit: cover;
        width: 100%;
        min-height: 100%;
    }

    .card__content--container {
        display: flex;
        gap: 1rem;
    }
}

@media only screen and (min-width: 1440px) {
    
    .card__content {
        padding-inline: 5rem;
        padding-block-start: 5rem;
    }
}

